--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://mental-health-api-v1.onrender.com",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -55,4 +56,5 @@
   "devDependencies": {
     "tailwindcss": "^3.4.3"
   }
+  
 }
