--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://mental-health-api-v1.onrender.com",
+  "proxy": "https://mental-health-api-v1.onrender.com",
   "dependencies": {
     "@emoji-mart/data": "^1.0.6",
     "@emoji-mart/react": "^1.0.1",
@@ -18,15 +18,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "button-component": "^1.0.2",
+    "dayjs": "^1.11.10",
     "emoji-mart": "^5.2.2",
     "framer-motion": "^7.5.3",
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
-    "axios": "^1.6.8",
-    "button-component": "^1.0.2",
-    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-embed": "^3.7.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.6",
     "react-icons": "^5.2.1",
@@ -35,8 +36,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.8",
     "simplebar-react": "^2.4.3",
+    "styled-components": "^6.1.8",
     "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^2.1.4"
   },
@@ -65,8 +66,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3",
-    "@faker-js/faker": "^7.5.0"
+    "@faker-js/faker": "^7.5.0",
+    "tailwindcss": "^3.4.3"
   }
-  
 }
