--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emoji-mart/react": "^1.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.4.2",
     "@iconify/react": "^4.0.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.169",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-embed": "^3.7.0",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.51.5",
     "react-i18next": "^11.18.6",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.0",
@@ -39,7 +41,8 @@
     "simplebar-react": "^2.4.3",
     "styled-components": "^6.1.8",
     "stylis-plugin-rtl": "^2.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
