--- a/client/package.json
+++ b/client/package.json
@@ -28,11 +28,13 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-embed": "^3.7.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.51.5",
     "react-i18next": "^11.18.6",
     "react-icons": "^5.2.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
