--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-mongo-sanitize": "^2.2.0",
@@ -24,6 +26,7 @@
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
+    "otp-generator": "^4.0.1",
     "xss": "^1.0.15"
   }
 }
