--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -29,6 +30,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
+    "socket.io": "^4.7.5",
     "xss": "^1.0.15"
   }
 }
