--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-i18next": "^11.18.6",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
+    "daisyui": "^4.12.2",
     "tailwindcss": "^3.4.3"
   }
 }
