--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^2.4.3",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "stylis-plugin-rtl": "^2.0.2",
     "web-vitals": "^2.1.4",
