--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "socket.io": "^4.7.5",
     "xss": "^1.0.15"
   }
