--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emoji-mart/react": "^1.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.4.2",
     "@iconify/react": "^4.0.0",
     "@mui/icons-material": "^5.15.14",
