--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "phosphor-react": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chat-engine-pretty": "^0.1.8",
     "react-datepicker": "^7.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
